# os

./: .bochsrc  .gitignore  README.md  dev_kernel_grub.img  main.C  makefile  scrn.C  start.asm
docs/: paging.md  virtualmemory.md
include/: system.h
src/: assert.C  bitmap.C  buddy_vm.C  console.C  console.H  exceptions.C  frame_pool.C  gdt.C  idt.C  idt_low.asm  interrupts.C  irq.C  link.ld  machine.C  machine_low.asm  main.C  makefile  memmap.C  page_table.C  paging_low.asm  start.asm  thread.C  timer.C  utils.C  vm_pool.C
src/include/: assert.H  bitmap.H  buddy_vm.H  console.H  exceptions.H  fifo_scheduler.H  frame_pool.H  gdt.H  idt.H  interrupts.H  irq.H  list.H  machine.H  machine_low.H  memmap.H  page_table.H  paging_low.H  rr_scheduler.H  scheduler.H  system.h  thread.H  threads_low.H  timer.H  types.H  utils.H  vm_pool.H
test/: CMakeCache.txt  CMakeLists.txt  Makefile  btest.sh  cmake_install.cmake  console_test.cpp  runTests  test.cpp  test_utils.cpp  test_vmpool.cpp
test/mocks/: console_mock.cpp
test/tests/: bitmap_test.cpp  buddy_vm_test.cpp  memmap_test.cpp  test_utils.cpp
